<resources>
    <string name="app_name">Practica1Comp1</string>
    <string name="operadores_aritmeticos">Operadores aritmeticos</string>
    <string name="reporte">REPORTE</string>
    <string name="columna">Columna</string>
    <string name="ocurrencia">Ocurrencias</string>
    <string name="linea">Linea</string>
    <string name="operador">Operador</string>
    <string name="tituloReporteOp">Reporte de operaciones</string>
    <string name="objeto">Objeto</string>
    <string name="cantidad_de_definiciones">Cantidad de definiciones</string>
    <string name="tituloRepNumGraficas">Reporte de graficas</string>
    <string name="tituloApp">Graficas</string>
    <string name="entrada">ENTRADA</string>
    <string name="ver_graficas">Ver graficas</string>
    <string name="analizar">Analizar</string>
    <string name="graficos_definidos">Graficos definidos</string>
    <string name="errores">ERRORES</string>
    <string name="reportes">REPORTES</string>
    <string name="tituloRepErrores">Reporte de errores</string>
    <string name="descripcion">Descripcion</string>
    <string name="tipo">Tipo</string>
    <string name="lexema">Lexema</string>
</resources>