<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RepErrores">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TableLayout
                android:id="@+id/tablaOperadores"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1">


                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_margin="3dp"
                        android:text="@string/lexema"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_margin="3dp"
                        android:text="@string/linea"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_margin="3dp"
                        android:text="@string/columna"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_margin="3dp"
                        android:text="@string/tipo"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="0"
                        android:layout_margin="3dp"
                        android:text="@string/descripcion"
                        android:textStyle="bold" />

                </TableRow>

            </TableLayout>
        </HorizontalScrollView>

    </ScrollView>


</LinearLayout>